--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Test Index.html
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>The Infosec Sapper</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Testing migration</h1>
+				<p>Testing migration from WordPress to GitHub Pages. <a href="/about">Read more about me.</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="https://github.com/TheSapper">github.com/TheSapper</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
