--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>The Infosec Sapper</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Testing migration</h1>
-				<p>Testing migration from WordPress to GitHub Pages. <a href="/about">Read more about me.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="https://github.com/TheSapper">github.com/TheSapper</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: The Infosec Sapper
+---
+<div class="blurb">
+	<h1>Test Page</h1>
+	<p>Testing migration from WordPress to GitHub Pages using Jekyll</p>
+</div><!--/.blurb>
