--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: This is the home of The Infosec Sapper.
 <ul>
 	{% for post in site.posts %}
 	  <li>
-	  <a href="{{ post.url }}">{{ post.title }}</a>
+	  <a href="{{ post.url }}">{{ post.title }} | {{ post.date }}</a>
 	    {{ post.excerpt }}
 	  </li>
 	{% endfor %}
