--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: The Infosec Sapper's Home
-description: This is the home of The Infosec Sapper.
+title: Home
+description: infosecsapper.com home page.
 ---
 <!-- posts -->
 <ul>
