--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: infosecsapper.com home page.
 ---
 <!-- posts -->
 {% for post in site.posts %}
-<a href="{{ post.url }}">{{ post.title }} - {{ post.date | date: "%-d %B %Y"  }}</a>
+<a href="{{ post.url }}">{{ post.title }}</a>
 	{{ post.excerpt }}
 {% endfor %}
 <!-- /posts -->
